--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
