--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
+    "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
