--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
+    "react-visibility-sensor": "^5.1.1",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
