--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "prettier.endOfLine": "auto",
   "prettier.withNodeModules": true,
   "spellright.language": ["en-GB-10-1."],
-  "spellright.documentTypes": ["markdown", "latex", "plaintext", "css"]
+  "spellright.documentTypes": ["markdown", "latex", "plaintext", "css"],
+  "emmet.showSuggestionsAsSnippets": true
 }
